# msvc-bug-fmt-modules

./: .gitignore  CMakeLists.txt  CMakePresets.json  lib.ixx  main.cpp  vcpkg.json
